# multy-poly-divy

./: .gitignore  README.md  dune  dune-project  multy_poly_divy.opam  package-lock.json  package.json
.github/workflows/: static.yml
lib/: division.ml  dune  monomial.ml  monomial.mli  polynomial.ml  polynomial.mli  util.ml
src/: Hello.ml  ReactApp.re  dune  getters.mli  index.html  main.ml
src/lib/: Q.ml  Q.mli  division.ml  dune  monomial.ml  monomial.mli  polynomial.ml  polynomial.mli  util.ml
test/: dune
