(executables
 (names app)
 (modes js)
 (libraries jsoo-react.lib lib)
 (preprocess
  (pps gen_js_api.ppx jsoo-react.ppx js_of_ocaml-ppx ppx_deriving.enum ppx_deriving.show)))

(rule
 (targets getters.ml)
 (deps getters.mli)
 (action
   (run %{bin:gen_js_api} -o %{targets} getters.mli)))


(alias
 (name default)
 (deps app.js))
